--- a/SalesWebMvc/Views/Sellers/Index.cshtml
+++ b/SalesWebMvc/Views/Sellers/Index.cshtml
@@ -1,7 +1,37 @@
-﻿@{ 
-    ViewData["Title"] = "Index";
+﻿@model IEnumerable<SalesWebMvc.Models.Seller>
+
+@{ 
+    ViewData["Title"] = "Sellers";
 }
 
-<h2>Sellers</h2>
+<h2>@ViewData["Title"]</h2>
 
 <p>Seller index page.</p>
+
+<table class="table table-striped table-hover">
+    <thead>
+        <tr class="font-weight-bold">
+            <th>@Html.DisplayNameFor(x => x.Name)</th>
+            <th>@Html.DisplayNameFor(x => x.Email)</th>
+            <th>@Html.DisplayNameFor(x => x.BirthDate)</th>
+            <th>@Html.DisplayNameFor(x => x.BaseSalary)</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+
+        @foreach (var item in Model)
+        {
+        <tr>
+            <td>@Html.DisplayFor(x => item.Name)</td>
+            <td>@Html.DisplayFor(x => item.Email)</td>
+            <td>@Html.DisplayFor(x => item.BirthDate)</td>
+            <td>@Html.DisplayFor(x => item.BaseSalary)</td>
+            <td><a asp-action="Edit" asp-route-id="@item.Id" />Edit</td>
+            <td><a asp-action="Details" asp-route-id="@item.Id" />Details</td>
+            <td><a asp-action="Delete" asp-route-id="@item.Id" />Delete</td>
+        </tr>
+        }
+
+    </tbody>
+</table>
